tests/fixtures/invalid/unnecessary-return-annotation.php
<?php

declare(strict_types=1);

/**
 * @return string
 */
function identity(string $value): string
{
    return $value;
}
